--- a/NLP_SENTIMENT_ANALYSIS.ipynb
+++ b/NLP_SENTIMENT_ANALYSIS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJByenHNxiQZmgHJszM7MF",
+      "authorship_tag": "ABX9TyMV+vqANB0ESu6BOEGmU/R8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5880,12 +5880,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range (20):\n",
+        "  print(f'X_test{i} {X_test[i]} s{i}{s[i]}')"
+      ],
       "metadata": {
-        "id": "691-ynMAxuIq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "691-ynMAxuIq",
+        "outputId": "91cd1a11-cc4f-40b4-8151-9341950a1df2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_test0 This app does not mess about. Very accurate and interface friendly. I am at a point that now I cannot do without this kind of interface integration to save 30 odd passwords I have. Any time I need to change a password or get a new one generated this does it seamlessly. Make this one stay please. All my fingers are thumbs up !! s0[{'label': 'POSITIVE', 'score': 0.998722493648529}]\n",
+            "X_test1 great when it works, but finicky and frustrating. edit: its finicky and frustrating because the password manager doesn't recognize a lot of fields where i need to put a password in or suggest a strong password and it wont save said strong password, so i have to go into the app instead of just signing in. the mobile version regularly just signs me out every thirty seconds sometimes. s1[{'label': 'NEGATIVE', 'score': 0.9980543851852417}]\n",
+            "X_test2 I would look somewhere else to store passwords. * passwords dont update across devices * i cant login in this app on android , it keeps saying there is no mobile data, which is absurd. I am also using wifi , same thing. * On the iPhone version, you can log in, but all passwords are blank * On desktop, it's ok. I think It was good before , somewhere you guys are dropping the ball.this app was actually good, and I recommend this like to everyone. s2[{'label': 'POSITIVE', 'score': 0.9937613606452942}]\n",
+            "X_test3 Appalling technical support. I got a new device and logged out of my old one. Tried logging into PWM on new device keep getting the error \"no internet connection\". Tried to log into PWM on my old device, to see if that worked. Nope, get the same error. Go through all the usual troubleshooting steps, uninstall, restart device etc etc. Nothing works. So I opened a ticket. Explained the problem and told them all the steps I'd tried. Only to get a generic response asking me to try the same steps s3[{'label': 'NEGATIVE', 'score': 0.9997630715370178}]\n",
+            "X_test4 Worked fine for a while but for some reason, whenever I type in my master password, it now doesn't let me log in and shows me an error, saying that there's no internet connection even though the internet works just fine for every other app on my phone. s4[{'label': 'NEGATIVE', 'score': 0.9938336610794067}]\n",
+            "X_test5 I don't know why but often it just doesn't pop up with username and password to fill in my apps and website passwords. And one thing I would truly like to see in this app is to unlock it with a pattern or pincode. But generally otherwise I like the ease of use and the fact that you can also write notes for the particular websites and apps. And I like Avira, having used their products for many years. s5[{'label': 'POSITIVE', 'score': 0.9541032314300537}]\n",
+            "X_test6 Excellent password manager! Had a problem with a button constantly on screen. Turned out to be an Android accessibility setting. All is great now! s6[{'label': 'POSITIVE', 'score': 0.9993104934692383}]\n",
+            "X_test7 Does everything it promises, across platforms, and free of charge, excellent, what more would you need?... actually, password sharing would be very useful 😉 s7[{'label': 'NEGATIVE', 'score': 0.8154729008674622}]\n",
+            "X_test8 This has been my favorite password management tool. However, I was recently forced to relogin and can't get an verification code anymore. I am from Philippines, pls advise. s8[{'label': 'NEGATIVE', 'score': 0.9990424513816833}]\n",
+            "X_test9 Hi team, Recently facing issue as not able to login into account. Tried clearing cache,re login into account. It just says preparing password. Please assist s9[{'label': 'NEGATIVE', 'score': 0.9960079193115234}]\n",
+            "X_test10 The most important thing about an app like these is that is has to work and remember password...after a update it says hey 0 password safed ....what a huge Shi. . Spending now half a day to make everywhere new passwords . Then better write them again on a piece of paper s10[{'label': 'NEGATIVE', 'score': 0.995438277721405}]\n",
+            "X_test11 Needs an auto generator built into the Android app. Also randomly forgets it's logged in and shows a blank list when I tap on the pop-up from my browser. Then when I open the app, it's still logged in, so it wasn't a security timeout. s11[{'label': 'NEGATIVE', 'score': 0.9994993209838867}]\n",
+            "X_test12 The app was great before but now I suddenly can't even log in with my master password it keeps saying \"incorrect password\" even tho it is correct s12[{'label': 'NEGATIVE', 'score': 0.9965431094169617}]\n",
+            "X_test13 App is not working anymore, saying there is no internet connection while every other app has connected fine. s13[{'label': 'NEGATIVE', 'score': 0.9988260865211487}]\n",
+            "X_test14 Full featured and convenient. Works well and does exactly what I need. s14[{'label': 'POSITIVE', 'score': 0.9997923970222473}]\n",
+            "X_test15 I used to be a ironvst user but I started using APM because its much better than ironvest.. however its such a shame that I dont know about Avira password manager sooner. Been using Avira service for antivirus since 2008. . Thank you for this app.. The perk using this app is they APM may tell you if your account have been breached and advice you to change your password. s15[{'label': 'NEGATIVE', 'score': 0.9910392165184021}]\n",
+            "X_test16 Doesn't open when you put master password. No error indicating the problem whether the password is wrong or not. s16[{'label': 'NEGATIVE', 'score': 0.9791390299797058}]\n",
+            "X_test17 App was great until a few weeks ago it started CONSTANTLY freezing after logging in. And nothing helps - I tried re-installing it, restarting my phone. It was a little annoying at first, but now it happens half of the times I try to use it. And auto-fill function doesn't work properly - it either doesn't show up at all for some websites or offers to \"save my password\" when I set my alarm clock. s17[{'label': 'NEGATIVE', 'score': 0.999068558216095}]\n",
+            "X_test18 This app is ok, but it requires a password prior to opening. That's better than trying to remember so many different passwords, but much less convenient than if it just opened whenever you need it. Also, it does not open for every site and is often unable to follow when a new password is needed. The PC version is a bit better than the android version. But, they both need improvement s18[{'label': 'NEGATIVE', 'score': 0.9945594668388367}]\n",
+            "X_test19 I think the best password manager out there. Has 2-way verification that no one else has. also includes a two way verification app so you have 2 apps in one and syncs it on all devices, thats the best. Informs you when a account has been breached (only pro version). The only think that I would like to have is clear the clipboard after a few seconds or minutes. Update Apr 2019: The autofill function is nit working for me. I don't know why. Also the clipboard is not working. s19[{'label': 'NEGATIVE', 'score': 0.9972571730613708}]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
